# HashMe

./: CMakeLists.txt  HashMeVersion.hpp.cmake  README.md  build.sh  configure.sh  generateVisualStudioProject.bat  generateXcodeProject.sh
.github/workflows/: cmake-multi-platform.yml
CMake additional/: printSummary.cmake
cmake additional/: colorFormatting.cmake  printSummary.cmake
examples/simple example/: CMakeLists.txt  SimpleExample.cpp
include/: Base64.hpp  CRC32_Hardware.hpp  CRC_Software.hpp  HashMe.hpp  HashMeVersion.hpp  HasherBase.hpp  MD5.hpp  PlatformConfig.hpp  SHA224.hpp  SHA224_Hardware.hpp  SHA256.hpp  SHA256_Hardware.hpp  SHA384.hpp  SHA384_Hardware.hpp  SHA512.hpp  SHA512_Hardware.hpp  Utils.hpp  predef.h
include/predef/other/: endian.h
src/: Base64.cpp  CRC32_Hardware.cpp  CRC_Software.cpp  HashMe.cpp  MD5.cpp  SHA224.cpp  SHA224.hpp  SHA224_Hardware.cpp  SHA256.cpp  SHA256_Hardware.cpp  SHA384.cpp  SHA384_Hardware.cpp  SHA512.cpp  SHA512_Hardware.cpp  Utils.cpp
